cmake_minimum_required(VERSION 3.22)
project(Maratona)

set(CMAKE_CXX_STANDARD 17)

#add_executable(beecrowd-ex-1000 beecrowd/exs-10xx/ex-1000/beecrowd-ex-1000.cpp)
#add_executable(beecrowd-ex-1001 beecrowd/exs-10xx/ex-1001/beecrowd-ex-1001.cpp)
#add_executable(beecrowd-ex-1002 beecrowd/exs-10xx/ex-1002/beecrowd-ex-1002.cpp)
#add_executable(beecrowd-ex-1003 beecrowd/exs-10xx/ex-1003/beecrowd-ex-1003.cpp)
#add_executable(beecrowd-ex-1004 beecrowd/exs-10xx/ex-1004/beecrowd-ex-1004.cpp)
#add_executable(beecrowd-ex-1005 beecrowd/exs-10xx/ex-1005/beecrowd-ex-1005.cpp)
#add_executable(beecrowd-ex-1006 beecrowd/exs-10xx/ex-1006/beecrowd-ex-1006.cpp)
#add_executable(beecrowd-ex-1007 beecrowd/exs-10xx/ex-1007/beecrowd-ex-1007.cpp)
#add_executable(beecrowd-ex-1008 beecrowd/exs-10xx/ex-1008/beecrowd-ex-1008.cpp)
#add_executable(beecrowd-ex-1009 beecrowd/exs-10xx/ex-1009/beecrowd-ex-1009.cpp)
#add_executable(beecrowd-ex-1010 beecrowd/exs-10xx/ex-1010/beecrowd-ex-1010.cpp)
#add_executable(beecrowd-ex-1011 beecrowd/exs-10xx/ex-1011/beecrowd-ex-1011.cpp)
#add_executable(beecrowd-ex-1012 beecrowd/exs-10xx/ex-1012/beecrowd-ex-1012.cpp)
#add_executable(beecrowd-ex-1013 beecrowd/exs-10xx/ex-1013/beecrowd-ex-1013.cpp)
#add_executable(beecrowd-ex-1014 beecrowd/exs-10xx/ex-1014/beecrowd-ex-1014.cpp)
#add_executable(beecrowd-ex-1015 beecrowd/exs-10xx/ex-1015/beecrowd-ex-1015.cpp)
#add_executable(beecrowd-ex-1016 beecrowd/exs-10xx/ex-1016/beecrowd-ex-1016.cpp)
#add_executable(beecrowd-ex-1017 beecrowd/exs-10xx/ex-1017/beecrowd-ex-1017.cpp)
#add_executable(beecrowd-ex-1018 beecrowd/exs-10xx/ex-1018/beecrowd-ex-1018.cpp)
#add_executable(beecrowd-ex-1019 beecrowd/exs-10xx/ex-1019/beecrowd-ex-1019.cpp)
#add_executable(beecrowd-ex-1020 beecrowd/exs-10xx/ex-1020/beecrowd-ex-1020.cpp)
#add_executable(beecrowd-ex-1021 beecrowd/exs-10xx/ex-1021/beecrowd-ex-1021.cpp)
#add_executable(beecrowd-ex-1025 beecrowd/exs-10xx/ex-1025/beecrowd-ex-1025.cpp)
#add_executable(beecrowd-ex-1028 beecrowd/exs-10xx/ex-1028/beecrowd-ex-1028.cpp)
#add_executable(beecrowd-ex-1035 beecrowd/exs-10xx/ex-1035/beecrowd-ex-1035.cpp)
#add_executable(beecrowd-ex-1036 beecrowd/exs-10xx/ex-1036/beecrowd-ex-1036.cpp)
#add_executable(beecrowd-ex-1037 beecrowd/exs-10xx/ex-1037/beecrowd-ex-1037.cpp)
#add_executable(beecrowd-ex-1038 beecrowd/exs-10xx/ex-1038/beecrowd-ex-1038.cpp)
#add_executable(beecrowd-ex-1040 beecrowd/exs-10xx/ex-1040/beecrowd-ex-1040.cpp)
#add_executable(beecrowd-ex-1041 beecrowd/exs-10xx/ex-1041/beecrowd-ex-1041.cpp)
#add_executable(beecrowd-ex-1042 beecrowd/exs-10xx/ex-1042/beecrowd-ex-1042.cpp)
#add_executable(beecrowd-ex-1043 beecrowd/exs-10xx/ex-1043/beecrowd-ex-1043.cpp)
#add_executable(beecrowd-ex-1044 beecrowd/exs-10xx/ex-1044/beecrowd-ex-1044.cpp)
#add_executable(beecrowd-ex-1045 beecrowd/exs-10xx/ex-1045/beecrowd-ex-1045.cpp)
#add_executable(beecrowd-ex-1046 beecrowd/exs-10xx/ex-1046/beecrowd-ex-1046.cpp)
#add_executable(beecrowd-ex-1047 beecrowd/exs-10xx/ex-1047/beecrowd-ex-1047.cpp)
#add_executable(beecrowd-ex-1048 beecrowd/exs-10xx/ex-1048/beecrowd-ex-1048.cpp)
#add_executable(beecrowd-ex-1049 beecrowd/exs-10xx/ex-1049/beecrowd-ex-1049.cpp)
#add_executable(beecrowd-ex-1050 beecrowd/exs-10xx/ex-1050/beecrowd-ex-1050.cpp)
#add_executable(beecrowd-ex-1051 beecrowd/exs-10xx/ex-1051/beecrowd-ex-1051.cpp)
#add_executable(beecrowd-ex-1052 beecrowd/exs-10xx/ex-1052/beecrowd-ex-1052.cpp)
#add_executable(beecrowd-ex-1059 beecrowd/exs-10xx/ex-1059/beecrowd-ex-1059.cpp)
#add_executable(beecrowd-ex-1060 beecrowd/exs-10xx/ex-1060/beecrowd-ex-1060.cpp)
#add_executable(beecrowd-ex-1062 beecrowd/exs-10xx/ex-1062/beecrowd-ex-1062.cpp)
#add_executable(beecrowd-ex-1064 beecrowd/exs-10xx/ex-1064/beecrowd-ex-1064.cpp)
#add_executable(beecrowd-ex-1065 beecrowd/exs-10xx/ex-1065/beecrowd-ex-1065.cpp)
#add_executable(beecrowd-ex-1066 beecrowd/exs-10xx/ex-1066/beecrowd-ex-1066.cpp)
#add_executable(beecrowd-ex-1067 beecrowd/exs-10xx/ex-1067/beecrowd-ex-1067.cpp)
#add_executable(beecrowd-ex-1068 beecrowd/exs-10xx/ex-1068/beecrowd-ex-1068.cpp)
#add_executable(beecrowd-ex-1069 beecrowd/exs-10xx/ex-1069/beecrowd-ex-1069.cpp)
#add_executable(beecrowd-ex-1070 beecrowd/exs-10xx/ex-1070/beecrowd-ex-1070.cpp)
#add_executable(beecrowd-ex-1071 beecrowd/exs-10xx/ex-1071/beecrowd-ex-1071.cpp)
#add_executable(beecrowd-ex-1072 beecrowd/exs-10xx/ex-1072/beecrowd-ex-1072.cpp)
#add_executable(beecrowd-ex-1073 beecrowd/exs-10xx/ex-1073/beecrowd-ex-1073.cpp)
#add_executable(beecrowd-ex-1074 beecrowd/exs-10xx/ex-1074/beecrowd-ex-1074.cpp)
#add_executable(beecrowd-ex-1075 beecrowd/exs-10xx/ex-1075/beecrowd-ex-1075.cpp)
#add_executable(beecrowd-ex-1076 beecrowd/exs-10xx/ex-1076/beecrowd-ex-1076.cpp)
#add_executable(beecrowd-ex-1078 beecrowd/exs-10xx/ex-1078/beecrowd-ex-1078.cpp)
#add_executable(beecrowd-ex-1080 beecrowd/exs-10xx/ex-1080/beecrowd-ex-1080.cpp)
#add_executable(beecrowd-ex-1082 beecrowd/exs-10xx/ex-1082/beecrowd-ex-1082.cpp)

#add_executable(beecrowd-ex-1110 beecrowd/exs-11xx/ex-1110/beecrowd-ex-1110.cpp)
#add_executable(beecrowd-ex-1114 beecrowd/exs-11xx/ex-1114/beecrowd-ex-1114.cpp)
#add_executable(beecrowd-ex-1143 beecrowd/exs-11xx/ex-1143/beecrowd-ex-1143.cpp)
#add_executable(beecrowd-ex-1144 beecrowd/exs-11xx/ex-1144/beecrowd-ex-1144.cpp)
#add_executable(beecrowd-ex-1152 beecrowd/exs-11xx/ex-1152/beecrowd-ex-1152.cpp)
#add_executable(beecrowd-ex-1153 beecrowd/exs-11xx/ex-1153/beecrowd-ex-1153.cpp)
#add_executable(beecrowd-ex-1157 beecrowd/exs-11xx/ex-1157/beecrowd-ex-1157.cpp)
#add_executable(beecrowd-ex-1170 beecrowd/exs-11xx/ex-1170/beecrowd-ex-1170.cpp)
#add_executable(beecrowd-ex-1171 beecrowd/exs-11xx/ex-1171/beecrowd-ex-1171.cpp)
#add_executable(beecrowd-ex-1172 beecrowd/exs-11xx/ex-1172/beecrowd-ex-1172.cpp)
#add_executable(beecrowd-ex-1173 beecrowd/exs-11xx/ex-1173/beecrowd-ex-1173.cpp)
#add_executable(beecrowd-ex-1176 beecrowd/exs-11xx/ex-1176/beecrowd-ex-1176.cpp)
#add_executable(beecrowd-ex-1180 beecrowd/exs-11xx/ex-1180/beecrowd-ex-1180.cpp)
#add_executable(beecrowd-ex-1198 beecrowd/exs-11xx/ex-1198/beecrowd-ex-1198.cpp)

#add_executable(beecrowd-ex-1212 beecrowd/exs-12xx/ex-1212/beecrowd-ex-1212.cpp)
#add_executable(beecrowd-ex-1221 beecrowd/exs-12xx/ex-1221/beecrowd-ex-1221.cpp)
#add_executable(beecrowd-ex-1245 beecrowd/exs-12xx/ex-1245/beecrowd-ex-1245.cpp)
#add_executable(beecrowd-ex-1253 beecrowd/exs-12xx/ex-1253/beecrowd-ex-1253.cpp)
#add_executable(beecrowd-ex-1259 beecrowd/exs-12xx/ex-1259/beecrowd-ex-1259.cpp)
#add_executable(beecrowd-ex-1260 beecrowd/exs-12xx/ex-1260/beecrowd-ex-1260.cpp)
#add_executable(beecrowd-ex-1261 beecrowd/exs-12xx/ex-1261/beecrowd-ex-1261.cpp)
#add_executable(beecrowd-ex-1281 beecrowd/exs-12xx/ex-1281/beecrowd-ex-1281.cpp)

#add_executable(beecrowd-ex-1303 beecrowd/exs-13xx/ex-1303/beecrowd-ex-1303.cpp)
#add_executable(beecrowd-ex-1307 beecrowd/exs-13xx/ex-1307/beecrowd-ex-1307.cpp)
#add_executable(beecrowd-ex-1308 beecrowd/exs-13xx/ex-1308/beecrowd-ex-1308.cpp)
#add_executable(beecrowd-ex-1318 beecrowd/exs-13xx/ex-1318/beecrowd-ex-1318.cpp)
#add_executable(beecrowd-ex-1329 beecrowd/exs-13xx/ex-1329/beecrowd-ex-1329.cpp)

#add_executable(beecrowd-ex-1410 beecrowd/exs-14xx/ex-1410/beecrowd-ex-1410.cpp)
#add_executable(beecrowd-ex-1430 beecrowd/exs-14xx/ex-1430/beecrowd-ex-1430.cpp)
#add_executable(beecrowd-ex-1436 beecrowd/exs-14xx/ex-1436/beecrowd-ex-1436.cpp)
#add_executable(beecrowd-ex-1471 beecrowd/exs-14xx/ex-1471/beecrowd-ex-1471.cpp)

#add_executable(beecrowd-ex-1547 beecrowd/exs-15xx/ex-1547/beecrowd-ex-1547.cpp)
#add_executable(beecrowd-ex-1548 beecrowd/exs-15xx/ex-1548/beecrowd-ex-1548.cpp)
#add_executable(beecrowd-ex-1561 beecrowd/exs-15xx/ex-1561/beecrowd-ex-1561.cpp)
#add_executable(beecrowd-ex-1583 beecrowd/exs-15xx/ex-1583/beecrowd-ex-1583.cpp)
#add_executable(beecrowd-ex-1589 beecrowd/exs-15xx/ex-1589/beecrowd-ex-1589.cpp)

#add_executable(beecrowd-ex-1607 beecrowd/exs-16xx/ex-1607/beecrowd-ex-1607.cpp)
#add_executable(beecrowd-ex-1609 beecrowd/exs-16xx/ex-1609/beecrowd-ex-1609.cpp)
#add_executable(beecrowd-ex-1676 beecrowd/exs-16xx/ex-1676/beecrowd-ex-1676.cpp)

#add_executable(beecrowd-ex-1763 beecrowd/exs-17xx/ex-1763/beecrowd-ex-1763.cpp)

#add_executable(beecrowd-ex-1835 beecrowd/exs-18xx/ex-1835/beecrowd-ex-1835.cpp)
#add_executable(beecrowd-ex-1866 beecrowd/exs-18xx/ex-1866/beecrowd-ex-1866.cpp)

#add_executable(beecrowd-ex-1909 beecrowd/exs-19xx/ex-1909/beecrowd-ex-1909.cpp)
#add_executable(beecrowd-ex-1910 beecrowd/exs-19xx/ex-1910/beecrowd-ex-1910.cpp)
#add_executable(beecrowd-ex-1933 beecrowd/exs-19xx/ex-1933/beecrowd-ex-1933.cpp)
#add_executable(beecrowd-ex-1943 beecrowd/exs-19xx/ex-1943/beecrowd-ex-1943.cpp)
#add_executable(beecrowd-ex-1960 beecrowd/exs-19xx/ex-1960/beecrowd-ex-1960.cpp)
#add_executable(beecrowd-ex-1985 beecrowd/exs-19xx/ex-1985/beecrowd-ex-1985.cpp)

#add_executable(beecrowd-ex-2006 beecrowd/exs-20xx/ex-2006/beecrowd-ex-2006.cpp)
#add_executable(beecrowd-ex-2058 beecrowd/exs-20xx/ex-2058/beecrowd-ex-2058.cpp)
#add_executable(beecrowd-ex-2061 beecrowd/exs-20xx/ex-2061/beecrowd-ex-2061.cpp)

#add_executable(beecrowd-ex-2162 beecrowd/exs-21xx/ex-2162/beecrowd-ex-2162.cpp)
#add_executable(beecrowd-ex-2172 beecrowd/exs-21xx/ex-2172/beecrowd-ex-2172.cpp)
#add_executable(beecrowd-ex-2174 beecrowd/exs-21xx/ex-2174/beecrowd-ex-2174.cpp)
#add_executable(beecrowd-ex-2180 beecrowd/exs-21xx/ex-2180/beecrowd-ex-2180.cpp)

#add_executable(beecrowd-ex-2312 beecrowd/exs-23xx/ex-2312/beecrowd-ex-2312.cpp)
#add_executable(beecrowd-ex-2328 beecrowd/exs-23xx/ex-2328/beecrowd-ex-2328.cpp)
#add_executable(beecrowd-ex-2339 beecrowd/exs-23xx/ex-2339/beecrowd-ex-2339.cpp)
#add_executable(beecrowd-ex-2344 beecrowd/exs-23xx/ex-2344/beecrowd-ex-2344.cpp)
#add_executable(beecrowd-ex-2369 beecrowd/exs-23xx/ex-2369/beecrowd-ex-2369.cpp)
#add_executable(beecrowd-ex-2374 beecrowd/exs-23xx/ex-2374/beecrowd-ex-2374.cpp)
#add_executable(beecrowd-ex-2375 beecrowd/exs-23xx/ex-2375/beecrowd-ex-2375.cpp)
#add_executable(beecrowd-ex-2377 beecrowd/exs-23xx/ex-2377/beecrowd-ex-2377.cpp)
#add_executable(beecrowd-ex-2388 beecrowd/exs-23xx/ex-2388/beecrowd-ex-2388.cpp)

#add_executable(beecrowd-ex-2413 beecrowd/exs-24xx/ex-2413/beecrowd-ex-2413.cpp)
#add_executable(beecrowd-ex-2416 beecrowd/exs-24xx/ex-2416/beecrowd-ex-2416.cpp)
#add_executable(beecrowd-ex-2434 beecrowd/exs-24xx/ex-2434/beecrowd-ex-2434.cpp)
#add_executable(beecrowd-ex-2440 beecrowd/exs-24xx/ex-2440/beecrowd-ex-2440.cpp)
#add_executable(beecrowd-ex-2455 beecrowd/exs-24xx/ex-2455/beecrowd-ex-2455.cpp)
#add_executable(beecrowd-ex-2478 beecrowd/exs-24xx/ex-2478/beecrowd-ex-2478.cpp)

#add_executable(beecrowd-ex-2514 beecrowd/exs-25xx/ex-2514/beecrowd-ex-2514.cpp)
#add_executable(beecrowd-ex-2534 beecrowd/exs-25xx/ex-2534/beecrowd-ex-2534.cpp)
#add_executable(beecrowd-ex-2562 beecrowd/exs-25xx/ex-2562/beecrowd-ex-2562.cpp)
#add_executable(beecrowd-ex-2567 beecrowd/exs-25xx/ex-2567/beecrowd-ex-2567.cpp)
#add_executable(beecrowd-ex-2598 beecrowd/exs-25xx/ex-2598/beecrowd-ex-2598.cpp)

#add_executable(beecrowd-ex-2653 beecrowd/exs-26xx/ex-2653/beecrowd-ex-2653.cpp)
#add_executable(beecrowd-ex-2670 beecrowd/exs-26xx/ex-2670/beecrowd-ex-2670.cpp)
#add_executable(beecrowd-ex-2674 beecrowd/exs-26xx/ex-2674/beecrowd-ex-2674.cpp)

#add_executable(beecrowd-ex-2717 beecrowd/exs-27xx/ex-2717/beecrowd-ex-2717.cpp)
#add_executable(beecrowd-ex-2752 beecrowd/exs-27xx/ex-2752/beecrowd-ex-2752.cpp)
#add_executable(beecrowd-ex-2756 beecrowd/exs-27xx/ex-2756/beecrowd-ex-2756.cpp)
#add_executable(beecrowd-ex-2783 beecrowd/exs-27xx/ex-2783/beecrowd-ex-2783.cpp)
#add_executable(beecrowd-ex-2791 beecrowd/exs-27xx/ex-2791/beecrowd-ex-2791.cpp)

#add_executable(beecrowd-ex-2813 beecrowd/exs-28xx/ex-2813/beecrowd-ex-2813.cpp)
#add_executable(beecrowd-ex-2839 beecrowd/exs-28xx/ex-2839/beecrowd-ex-2839.cpp)
#add_executable(beecrowd-ex-2896 beecrowd/exs-28xx/ex-2896/beecrowd-ex-2896.cpp)

#add_executable(beecrowd-ex-2936 beecrowd/exs-29xx/ex-2936/beecrowd-ex-2936.cpp)
#add_executable(beecrowd-ex-2987 beecrowd/exs-29xx/ex-2987/beecrowd-ex-2987.cpp)

#add_executable(beecrowd-ex-3004 beecrowd/exs-30xx/ex-3004/beecrowd-ex-3004.cpp)
#add_executable(beecrowd-ex-3046 beecrowd/exs-30xx/ex-3046/beecrowd-ex-3046.cpp)
#add_executable(beecrowd-ex-3047 beecrowd/exs-30xx/ex-3047/beecrowd-ex-3047.cpp)
#add_executable(beecrowd-ex-3048 beecrowd/exs-30xx/ex-3048/beecrowd-ex-3048.cpp)
#add_executable(beecrowd-ex-3055 beecrowd/exs-30xx/ex-3055/beecrowd-ex-3055.cpp)

#add_executable(beecrowd-ex-3129 beecrowd/exs-31xx/ex-3129/beecrowd-ex-3129.cpp)
#add_executable(beecrowd-ex-3139 beecrowd/exs-31xx/ex-3139/beecrowd-ex-3139.cpp)
#add_executable(beecrowd-ex-3170 beecrowd/exs-31xx/ex-3170/beecrowd-ex-3170.cpp)

#add_executable(beecrowd-ex-3342 beecrowd/exs-33xx/ex-3342/beecrowd-ex-3342.cpp)
#add_executable(beecrowd-ex-3399 beecrowd/exs-33xx/ex-3399/beecrowd-ex-3399.cpp)

#add_executable(beecrowd-ex-3405 beecrowd/exs-34xx/ex-3405/beecrowd-ex-3405.cpp)
#add_executable(beecrowd-ex-3424 beecrowd/exs-34xx/ex-3424/beecrowd-ex-3424.cpp)

#add_executable(codeforces-ex-0004-a codeforces/exs-00xx/exs-0004/a/codeforces-ex-0004-a.cpp)

#add_executable(codeforces-ex-1833-a codeforces/exs-18xx/exs-1833/a/codeforces-ex-1833-a.cpp)
#add_executable(codeforces-ex-1833-b codeforces/exs-18xx/exs-1833/b/codeforces-ex-1833-b.cpp)
#add_executable(codeforces-ex-1833-c codeforces/exs-18xx/exs-1833/c/codeforces-ex-1833-c.cpp)

#add_executable(codeforces-ex-1851-a codeforces/exs-18xx/exs-1851/a/codeforces-ex-1851-a.cpp)
#add_executable(codeforces-ex-1851-b codeforces/exs-18xx/exs-1851/b/codeforces-ex-1851-b.cpp)
#add_executable(codeforces-ex-1851-c codeforces/exs-18xx/exs-1851/c/codeforces-ex-1851-c.cpp)

#add_executable(codeforces-ex-1872-a codeforces/exs-18xx/exs-1872/a/codeforces-ex-1872-a.cpp)
#add_executable(codeforces-ex-1872-b codeforces/exs-18xx/exs-1872/b/codeforces-ex-1872-b.cpp)
#add_executable(codeforces-ex-1872-c codeforces/exs-18xx/exs-1872/c/codeforces-ex-1872-c.cpp)

#add_executable(codeforces-ex-1881-a codeforces/exs-18xx/exs-1881/a/codeforces-ex-1881-a.cpp)
#add_executable(codeforces-ex-1881-b codeforces/exs-18xx/exs-1881/b/codeforces-ex-1881-b.cpp)
#add_executable(codeforces-ex-1881-c codeforces/exs-18xx/exs-1881/c/codeforces-ex-1881-c.cpp)

#add_executable(codeforces-ex-1899-a codeforces/exs-18xx/exs-1899/a/codeforces-ex-1899-a.cpp)
#add_executable(codeforces-ex-1899-c codeforces/exs-18xx/exs-1899/c/codeforces-ex-1899-c.cpp)

#add_executable(codeforces-ex-1907-a codeforces/exs-19xx/exs-1907/a/codeforces-ex-1907-a.cpp)
#add_executable(codeforces-ex-1907-b codeforces/exs-19xx/exs-1907/b/codeforces-ex-1907-b.cpp)
#add_executable(codeforces-ex-1907-c codeforces/exs-19xx/exs-1907/c/codeforces-ex-1907-c.cpp)

#add_executable(kattis-ex-amoebas kattis/exs-a/ex-amoebas/kattis-ex-amoebas.cpp)

#add_executable(kattis-ex-builddeps kattis/exs-b/ex-builddeps/kattis-ex-builddeps.cpp)

#add_executable(kattis-ex-countingstars kattis/exs-c/ex-countingstars/kattis-ex-countingstars.cpp)

#add_executable(kattis-ex-dominoes2 kattis/exs-d/ex-dominoes2/kattis-ex-dominoes2.cpp)

#add_executable(kattis-ex-gold kattis/exs-g/ex-gold/kattis-ex-gold.cpp)

#add_executable(kattis-ex-hello kattis/exs-h/ex-hello/kattis-ex-hello.cpp)

#add_executable(kattis-ex-reachableroads kattis/exs-r/ex-reachableroads/kattis-ex-reachableroads.cpp)

#add_executable(kattis-ex-terraces kattis/exs-t/ex-terraces/kattis-ex-terraces.cpp)

#add_executable(kattis-ex-wheresmyinternet kattis/exs-w/ex-wheresmyinternet/kattis-ex-wheresmyinternet.cpp)

add_executable(map recursos/estruturas-de-dados/map/map.cpp)
add_executable(queue recursos/estruturas-de-dados/queue/queue.cpp)
add_executable(set recursos/estruturas-de-dados/set/set.cpp)
add_executable(stack recursos/estruturas-de-dados/stack/stack.cpp)

add_executable(depth-first-search recursos/grafos/depth-first-search/depth-first-search.cpp)
add_executable(breadth-first-search recursos/grafos/breadth-first-search/breadth-first-search.cpp)
add_executable(flood-fill recursos/grafos/flood-fill/flood-fill.cpp)
add_executable(all-topological-sort recursos/grafos/topological-sort/all-topological-sort.cpp)
add_executable(topological-sort recursos/grafos/topological-sort/topological-sort.cpp)
add_executable(kahn recursos/grafos/topological-sort/kahn.cpp)
add_executable(kruskal recursos/grafos/kruskal/kruskal.cpp)
add_executable(dijkstra recursos/grafos/dijkstra/dijkstra.cpp)
add_executable(bellman-ford recursos/grafos/bellman-ford/bellman-ford.cpp)
add_executable(floyd-warshall recursos/grafos/floyd-warshall/floyd-warshall.cpp)

#add_executable(uva-ex-00200 uva/exs-002xx/ex-00200/uva-ex-00200.cpp)

#add_executable(uva-ex-00352 uva/exs-003xx/ex-00352/uva-ex-00352.cpp)

#add_executable(uva-ex-00459 uva/exs-004xx/ex-00459/uva-ex-00459.cpp)
#add_executable(uva-ex-00469 uva/exs-004xx/ex-00469/uva-ex-00469.cpp)

#add_executable(uva-ex-00572 uva/exs-005xx/ex-00572/uva-ex-00572.cpp)

#add_executable(uva-ex-00852 uva/exs-008xx/ex-00852/uva-ex-00852.cpp)
#add_executable(uva-ex-00871 uva/exs-008xx/ex-00871/uva-ex-00871.cpp)
#add_executable(uva-ex-00872 uva/exs-008xx/ex-00872/uva-ex-00872.cpp)

#add_executable(uva-ex-01103 uva/exs-011xx/ex-01103/uva-ex-01103.cpp)

#add_executable(uva-ex-11094 uva/exs-110xx/ex-11094/uva-ex-11094.cpp)

#add_executable(uva-ex-11518 uva/exs-115xx/ex-11518/uva-ex-11518.cpp)
#add_executable(uva-ex-11561 uva/exs-115xx/ex-11561/uva-ex-11561.cpp)

#add_executable(uva-ex-11749 uva/exs-117xx/ex-11749/uva-ex-11749.cpp)

#add_executable(uva-ex-11906 uva/exs-119xx/ex-11906/uva-ex-11906.cpp)
#add_executable(uva-ex-11953 uva/exs-119xx/ex-11953/uva-ex-11953.cpp)

add_executable(teste teste.cpp)